# refusal-compliance-taxonomy

./: .gitignore  README.md  example_inference.py  pyproject.toml
docs/: METHODOLOGY.md  TAXONOMY.md
docs/datasets/: do-not-answer-2023.md  jailbreakbench-2024.md  or-bench-2025.md  rule-based-rewards-drbr-2024.md  sorry-bench-2024.md  wildguard-2024.md
docs/templates/: dataset_card.md  mapping_plan.md
examples/: dataset_pipeline_config.json  dataset_pipeline_config_aligned_unaligned.json  dataset_pipeline_config_opensource.json  dataset_pipeline_constitution.json  opensource_models.md
examples/outputs/: README.md  inference_results.json  test_data.json  train_data.json  training_args.json  val_data.json
src/data_processing/: __init__.py  cli.py  processor.py
src/dataset_pipeline/: QUICK_REFERENCE.md  README.md  README_DATASET_PIPELINE.md  __init__.py  cli.py  config.py  generation.py  ingestion.py  labeling.py  pipeline.py  quality.py
src/rejection_detection/: __init__.py  data_utils.py  inference.py  model.py  taxonomies.py  train.py  training.py
tests/: __init__.py  test_cli.py  test_data_utils.py  test_inference.py  test_model.py  test_new_functionality.py  test_rejection_detection.py  test_taxonomies.py  test_training.py
